--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "work-and-travel",
+  "homepage": "http://abacademia.ge/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
